# CS1400-practice

./: CMakeLists.txt
include/: author.h  book.h  ex1301.h
src/: assignment02.cpp  author.cpp  book.cpp  ex0101.cpp  ex0102.cpp  ex0201.cpp  ex0202.cpp  ex0203.cpp  ex0301.cpp  ex0302.cpp  ex0401.cpp  ex0402.cpp  ex0501.cpp  ex0502.cpp  ex0601.cpp  ex0602.cpp  ex0603.cpp  ex0701.cpp  ex0801.cpp  ex0802.cpp  ex0901.cpp  ex1001.cpp  ex1002.cpp  ex1101.cpp  ex1102.cpp  ex1201.cpp  ex1202.cpp  ex1301.cpp
