cmake_minimum_required(VERSION 3.20)
project(cpp_starter_project)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include)

add_executable(main src/main.cpp)

add_executable(ex0101 src/ex0101.cpp)
add_executable(ex0102 src/ex0102.cpp)
add_executable(ex0201 src/ex0201.cpp)
add_executable(ex0202 src/ex0202.cpp)
add_executable(ex0203 src/ex0203.cpp)
add_executable(ex0301 src/ex0301.cpp)
add_executable(ex0302 src/ex0302.cpp)
add_executable(ex0401 src/ex0401.cpp)
add_executable(ex0402 src/ex0402.cpp)
add_executable(ex0501 src/ex0501.cpp)
add_executable(ex0502 src/ex0502.cpp)
add_executable(ex0601 src/ex0601.cpp)
add_executable(ex0602 src/ex0602.cpp)
add_executable(ex0603 src/ex0603.cpp)
add_executable(ex0701 src/ex0701.cpp)
add_executable(ex0801 src/ex0801.cpp)
add_executable(ex0802 src/ex0802.cpp src/author.cpp src/book.cpp)
add_executable(ex0901 src/ex0901.cpp)
add_executable(ex1001 src/ex1001.cpp)
add_executable(ex1002 src/ex1002.cpp)
add_executable(ex1101 src/ex1101.cpp)
add_executable(ex1102 src/ex1102.cpp)
add_executable(ex1201 src/ex1201.cpp)
add_executable(ex1202 src/ex1202.cpp)
add_executable(ex1301 src/ex1301.cpp include/ex1301.h)

add_executable(assignment02 src/assignment02.cpp)
